fix(Chrony): Change public_ntp_servers to ntp_servers

--- a/roles/chrony/templates/chrony.conf.j2
+++ b/roles/chrony/templates/chrony.conf.j2
@@ -1,6 +1,6 @@
 # Managed by Ansible
 
-{% for server in public_ntp_servers %}
+{% for server in ntp_servers %}
 server {{server}} iburst
 {% endfor %}
 
