chrony: Rename ntp_servers to chrony_servers

--- a/roles/chrony/templates/chrony.conf.j2
+++ b/roles/chrony/templates/chrony.conf.j2
@@ -1,6 +1,6 @@
 # Managed by Ansible
 
-{% for server in ntp_servers %}
+{% for server in chrony_servers %}
 server {{server}} iburst
 {% endfor %}
 
